--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 authors = ["Jacob Killelea <jkillelea@protonmail.ch>"]
 
 [dependencies]
+ocl = "0.19.0"
 png = "0.12.0"
 rand = "0.5.5"
