--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,7 @@ authors = ["Jacob Killelea <jkillelea@protonmail.ch>"]
 ocl = "0.19.0"
 png = "0.12.0"
 rand = "0.5.5"
+
+[features]
+default = []
+opencl = []
