--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ authors = ["Jacob Killelea <jkillelea@protonmail.ch>"]
 ocl = "0.19.0"
 png = "0.12.0"
 rand = "0.5.5"
+rayon = "1.0.2"
 
 [features]
 default = []
 opencl = []
+rayon_impl = []
